--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.3
 bleach==6.1.0
 dj-database-url==0.5.0
 Django==4.2.10
+django-bootstrap-v5==1.0.11
 django-etc==1.4.0
 django-hitcount==1.3.5
+django-humanize==0.1.2
 django-resized==1.0.2
 django-summernote==0.8.20.0
 django-taggit==5.0.1
 django-taggit-labels==0.7.0
 django-tinymce==3.7.1
 gunicorn==20.1.0
+humanize==4.9.0
 pillow==10.2.0
 psycopg2==2.9.9
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 webencodings==0.5.1
 whitenoise==5.3.0
